--- a/style.css
+++ b/style.css
@@ -33,12 +33,9 @@ h3{
     padding: 6rem;
 }
 
-.footer{
+.backgroundcolor{
     background-color: black;
-    width: 1440px;
-height: 246px;
-left: 0px;
-top: 5901px;
+    
 }
 
 .main-header h1{ 
